--- a/src/ArchiDesignPatterns.Mobile/Pages/DesignPatterns/SingletonPatternPage.xaml
+++ b/src/ArchiDesignPatterns.Mobile/Pages/DesignPatterns/SingletonPatternPage.xaml
@@ -1,4 +1,4 @@
-﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:ArchiDesignPatterns.Mobile.ViewModels"
              x:Class="ArchiDesignPatterns.Mobile.Pages.DesignPatterns.SingletonPatternPage"
